--- a/StarCapWeb/Principal.Master
+++ b/StarCapWeb/Principal.Master
@@ -13,7 +13,7 @@
 <body>
     <form id="form1" runat="server">
         <header class="container-fluid bg-dark text-white">
-            <h1>StarCap Rewards</h1>
+            <h1>Medidores smart</h1>
         </header>
         <div class="mt-5">
             <asp:Menu ID="Menu1" runat="server" DataSourceID="SiteMapDataSource1" Orientation="Horizontal" StaticDisplayLevels="2"></asp:Menu>
